--- a/index.html
+++ b/index.html
@@ -6,8 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Quicksand&family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section id="top-banner" >
+        <div class="half-width">    
+            <h1>Welcome TO</h1>
+            <h1><span class="gold-color">Humayun Faridi</span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut dolorum consequatur tenetur quidem illum doloremque quisquam, voluptate neque, incidunt molestiae eveniet assumenda quam dicta nesciunt, ex cupiditate excepturi explicabo corporis?</p>
+            <a class="hire-button" href="">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/bg1.png" alt="">
+        </div>
+    </section>
+    <section id="mid-section">
+        <div class="half-width">
+            <img src="images/Untitled-2.png" alt="">
+        </div>
+        <div class="half-width">    
+            <h1>Dream <span class="gold-color">High</span></h1>
+            
+            <h3>Become a web developer</h3>
+            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut dolorum consequatur tenetur quidem illum doloremque quisquam, voluptate neque, incidunt molestiae eveniet assumenda quam dicta nesciunt, ex cupiditate excepturi explicabo corporis?</p>
+            <a class="resume-button" href="">Download Resume</a>
+        </div>
+    </section>
+    <section id="last-section">
+        <div>
+            <h1>Experiences</h1>
+            <div class="box-container">
+                <div class="box">
+                    <h2>Full Stack Web Developer</h2>
+                    <h3>2021-Present | Pro Level Developer</h3>
+                    <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                </div>
+                <div class="box">
+                    <h2>Baby Web Developer</h2>
+                    <h3>2020-2021 | Programming Hero Learner</h3>
+                    <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <small>© Peter Parker 2021, a Programming Hero initiative.</small>
+    </footer>
+   
+
 </body>
 </html>
