--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <a class="hire-button" href="">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/bg1.png" alt="">
+            <img src="images/bgone.png" alt="">
         </div>
     </section>
     <section id="mid-section">
         <div class="half-width">
-            <img src="images/Untitled-2.png" alt="">
+            <img src="images/bg2" alt="">
         </div>
         <div class="half-width">    
             <h1>Dream <span class="gold-color">High</span></h1>
